--- a/css/movies.css
+++ b/css/movies.css
@@ -31,6 +31,7 @@
     opacity: 0.9;
     margin: 0;
     padding: 0;
+    max-width: 70px;
     align-items: stretch;
     flex: 1 1 auto;
     height: 100%;
