Add first version of html for movie page in mobile format

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -12,6 +12,29 @@
     <div class="movie-description">Description: {{longDescription}}</div>
 </div>
 
+<div class="movie-general">
+    <div class="movie-general-background"></div>
+    <div class="movie-thumbnail-image"></div>
+    <div class="movie-title"></div>
+</div>
+
+<div class="movie-short-technical-info">
+    <div class="movie-length"></div>
+    <div class="movie-year"></div>
+</div>
+
+<div class="movie-summary"></div>
+
+<div class="movie-info">
+    <ul>
+        <li>
+            <div class="movie-info-logo"></div>
+            <div class="movie-info-title"></div>
+            <div class="movie-info-description"></div>
+        </li>
+    </ul>
+</div>
+
 <div class="movie-preview">
     <div class="movie-preview"> Preview <span>{{previewUrl}}</span></div>
 </div>
