Add html for movie-info section in movie mobile format page

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -37,17 +37,43 @@
 </div>
 
 <div class="movie-summary">{{longDescription}}</div>
-<!--
+
 <div class="movie-info">
     <ul>
         <li>
             <div class="movie-info-logo"></div>
             <div class="movie-info-title"></div>
-            <div class="movie-info-description"></div>
+            <div class="movie-info-description">{{trackName}}</div>
+        </li>
+        <li>
+            <div class="movie-info-logo"></div>
+            <div class="movie-info-title"></div>
+            <div class="movie-info-description">{{contentAdvisoryRating}}</div>
+        </li>
+        <li>
+            <div class="movie-info-logo"></div>
+            <div class="movie-info-title"></div>
+            <div class="movie-info-description">{{artistName}}</div>
+        </li>
+        <li>
+            <div class="movie-info-logo"></div>
+            <div class="movie-info-title"></div>
+            <div class="movie-info-description">Could be taken from an API</div>
+        </li>
+        <li>
+            <div class="movie-info-logo"></div>
+            <div class="movie-info-title"></div>
+            <div class="movie-info-description">Could be taken from an API</div>
+        </li>
+        <li>
+            <div class="movie-info-logo"></div>
+            <div class="movie-info-title"></div>
+            <div class="movie-info-description">Language: English</div>
         </li>
     </ul>
 </div>
 
+<!--
 <div class="movie-preview">
     <div class="movie-preview"> Preview <span>{{previewUrl}}</span></div>
 </div>-->
