--- a/css/style.css
+++ b/css/style.css
@@ -597,11 +597,12 @@ button {
     }
     
     .navigation-bar {
-        height: 35%;
+        box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 1);
         box-sizing: border-box;
         padding: 0 3%;
         width: 100%;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 30%, transparent);
+        background-color: black;
+        opacity: 0.85;
         display: inline-flex;
         position: fixed;
         top: 0;
@@ -831,9 +832,7 @@ button {
     }
     
     .navigation-bar {
-        height: 55%;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 10%, transparent);
-    
+        opacity: 0.7;
     }
 
 
