--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -41,32 +41,44 @@
 <div class="movie-info">
     <ul>
         <li>
-            <div class="movie-info-logo"></div>
+            <div class="movie-info-name-icon movie-info-icon">
+                <img src="url(../../img/movie-content/svg/movie-info-name-icon.svg"/>
+            </div>
             <div class="movie-info-title"></div>
             <div class="movie-info-description">{{trackName}}</div>
         </li>
         <li>
-            <div class="movie-info-logo"></div>
+            <div class="movie-info-pgrating-icon movie-info-icon">
+                <img src="url(../../img/movie-content/svg/movie-info-pgrating-icon.svg"/>
+            </div>
             <div class="movie-info-title"></div>
             <div class="movie-info-description">{{contentAdvisoryRating}}</div>
         </li>
         <li>
-            <div class="movie-info-logo"></div>
+            <div class="movie-info-director-icon movie-info-icon">
+                <img src="url(../../img/movie-content/svg/movie-info-director-icon.svg"/>
+            </div>
             <div class="movie-info-title"></div>
             <div class="movie-info-description">{{artistName}}</div>
         </li>
         <li>
-            <div class="movie-info-logo"></div>
+            <div class="movie-info-productionhouse-icon movie-info-icon">
+                <img src="url(../../img/movie-content/svg/movie-info-productionhouse-icon.svg"/>
+            </div>
             <div class="movie-info-title"></div>
             <div class="movie-info-description">Could be taken from an API</div>
         </li>
         <li>
-            <div class="movie-info-logo"></div>
+            <div class="movie-info-writers-icon movie-info-icon">
+                <img src="url(../../img/movie-content/svg/movie-info-writers-icon.svg"/>
+            </div>
             <div class="movie-info-title"></div>
             <div class="movie-info-description">Could be taken from an API</div>
         </li>
         <li>
-            <div class="movie-info-logo"></div>
+            <div class="movie-info-language-icon movie-info-icon">
+                <img src="url(../../img/movie-content/svg/movie-info-language-icon.svg"/>
+            </div>
             <div class="movie-info-title"></div>
             <div class="movie-info-description">Language: English</div>
         </li>
