--- a/css/movie.css
+++ b/css/movie.css
@@ -49,10 +49,68 @@ html{
     background-size: 90%;
 }
 
-.movie-info-icon img{
-    width: 6%;
+.movie-info-box{
+    background-color: #05052B;
 }
 
-.movie-info-title{
-    display: none;
+/*
+.movie-info-details{
+    padding: 0;
+    margin: 0;
+}*/
+
+.movie-info-box{
+    display:block;
+    font-size: 14px;
+}
+.movie-info-subject{
+    width:100%;
+    padding:0;
+    margin: 0;
+}
+
+.icon {
+    vertical-align: middle;
+    line-height: normal;
+    margin: 0;
+    margin-right: 0.5em;
+    padding: 4%;
+    border: none;
+    width: 100%;
+    max-width: 32px;
+    height: 100%;
+    max-height: 32px;
+    display: inline-block;
+    background-size: 80% 80%;
+    background-position: center;
+    background-color: #132340;
+    background-repeat: no-repeat;
+}
+
+.movie-info-name-icon{
+    background-image: url('../img/movie-content/svg/movie-info-name-icon.svg');
+}
+
+.movie-info-pgrating-icon{
+    background-image: url('../img/movie-content/svg/movie-info-pgrating-icon.svg');
+}
+
+.movie-info-director-icon{
+    background-image: url('../img/movie-content/svg/movie-info-director-icon.svg');
+}
+
+.movie-info-productionhouse-icon{
+    background-image: url('../img/movie-content/svg/movie-info-productionhouse-icon.svg');
+}
+
+.movie-info-writers-icon{
+    background-image: url('../img/movie-content/svg/movie-info-writers-icon.svg');
+}
+
+.movie-info-language-icon{
+    background-image: url('../img/movie-content/svg/movie-info-language-icon.svg');
+}
+
+.movie-info-price-icon{
+    background-image: url('../img/movie-content/svg/movie-info-price-icon.svg');
 }
