--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -1,17 +1,7 @@
 <head>
     <title>{{name}}</title>
 </head>
-<!--
-<div class="movie">
-    <div class="movie-name"> {{trackName}}</div>
-    <div class="movie-cover"> <img src="{{artworkUrl100}}"/></div>
-    <div class="movie-genre">Genre : {{primaryGenreName}}</div>
-    <div class="movie-date">Release date :{{releaseDate}}</div>
-    <div class="movie-rating">Rating : {{contentAdvisoryRating}}</div>
-    <div class="movie-price">Price : {{trackPrice}}</div>
-    <div class="movie-description">Description: {{longDescription}}</div>
-</div>
--->
+
 <div class="movie-general-background">
     <img src="url(../../img/background-movie2.png">
 </div>
@@ -38,54 +28,48 @@
 
 <div class="movie-summary">{{longDescription}}</div>
 
-<div class="movie-info">
-    <ul>
-        <li>
-            <div class="movie-info-name-icon movie-info-icon">
-                <img src="url(../../img/movie-content/svg/movie-info-name-icon.svg"/>
-            </div>
-            <div class="movie-info-title"></div>
-            <div class="movie-info-description">{{trackName}}</div>
-        </li>
-        <li>
-            <div class="movie-info-pgrating-icon movie-info-icon">
-                <img src="url(../../img/movie-content/svg/movie-info-pgrating-icon.svg"/>
-            </div>
-            <div class="movie-info-title"></div>
-            <div class="movie-info-description">{{contentAdvisoryRating}}</div>
-        </li>
-        <li>
-            <div class="movie-info-director-icon movie-info-icon">
-                <img src="url(../../img/movie-content/svg/movie-info-director-icon.svg"/>
-            </div>
-            <div class="movie-info-title"></div>
-            <div class="movie-info-description">{{artistName}}</div>
-        </li>
-        <li>
-            <div class="movie-info-productionhouse-icon movie-info-icon">
-                <img src="url(../../img/movie-content/svg/movie-info-productionhouse-icon.svg"/>
-            </div>
-            <div class="movie-info-title"></div>
-            <div class="movie-info-description">Could be taken from an API</div>
-        </li>
-        <li>
-            <div class="movie-info-writers-icon movie-info-icon">
-                <img src="url(../../img/movie-content/svg/movie-info-writers-icon.svg"/>
-            </div>
-            <div class="movie-info-title"></div>
-            <div class="movie-info-description">Could be taken from an API</div>
-        </li>
-        <li>
-            <div class="movie-info-language-icon movie-info-icon">
-                <img src="url(../../img/movie-content/svg/movie-info-language-icon.svg"/>
-            </div>
-            <div class="movie-info-title"></div>
-            <div class="movie-info-description">Language: English</div>
-        </li>
-    </ul>
+<div class="movie-info-box">
+    <div class="movie-info-subject">
+        <span class="movie-info-name-icon icon"></span>
+        <span class="movie-info-title"></span>
+        {{trackName}}
+    </div>
+    <div class="movie-info-subject">
+        <span class="movie-info-pgrating-icon icon"></span>
+        <span class="movie-info-title"></span>
+        Rated {{contentAdvisoryRating}}
+    </div>
+    <div class="movie-info-subject">
+        <span class="movie-info-director-icon icon"></span>
+        <span class="movie-info-title"></span>
+        {{artistName}}
+    </div>
+    <div class="movie-info-subject">
+        <span class="movie-info-productionhouse-icon icon"></span>
+        <span class="movie-info-title"></span>
+        {{productionHouse}}
+    </div>
+    <div class="movie-info-subject">
+        <span class="movie-info-writers-icon icon"></span>
+        <span class="movie-info-title"></span>
+        {{writers}}
+    </div>
+    <div class="movie-info-subject">
+        <span class="movie-info-language-icon icon"></span>
+        <span class="movie-info-title"></span>
+        {{language}}
+    </div>
+    <div class="movie-info-subject">
+        <span class="movie-info-price-icon icon"></span>
+        <span class="movie-info-title"></span>
+        {{trackPrice}} {{currency}}
+    </div>
 </div>
 
-<!--
 <div class="movie-preview">
-    <div class="movie-preview"> Preview <span>{{previewUrl}}</span></div>
-</div>-->
+    <span>Preview</span>
+    <video width=100% controls>
+        <source src={{previewUrl}} type="video/m4v">
+        Your browser does not support HTML5 video.
+    </video>
+</div>
