--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -2,74 +2,77 @@
     <title>{{name}}</title>
 </head>
 
-<div class="movie-general-background">
-    <img src="url(../../img/background-movie2.png">
-</div>
-
-<div class="movie-bar">
-    <div class="movie-thumbnail-image">
-        <img src="{{artworkUrl100}}"/></div>
-    <div class="movie-bar-info">
-        <div class="movie-bar-title">{{trackName}}</div>
-        <div class="movie-bar-genre">{{primaryGenreName}}</div>
+<div class="movie-page">
+    <div class="movie-general-background">
+        <img src="url(../../img/background-movie2.png">
     </div>
 
-</div>
+    <div class="movie-bar">
+        <div class="movie-thumbnail-image">
+            <img src="{{artworkUrl100}}"/></div>
+        <div class="movie-bar-info">
+            <div class="movie-bar-title">{{trackName}}</div>
+            <div class="movie-bar-genre">{{primaryGenreName}}</div>
+        </div>
+
+    </div>
 
 
-<div class="movie-short-technical-info">
-    <!--<div class="movie-length">{{trackTimeMillis}}</div>
-    <div class="movie-year">{{releaseDate}}</div>-->
-    <div class="movie-length">240 min</div>
-    <div class="movie-year">2001</div>
-    <div class="movie-country">{{country}}</div>
+    <div class="movie-short-technical-info">
+        <!--<div class="movie-length">{{trackTimeMillis}}</div>
+        <div class="movie-year">{{releaseDate}}</div>-->
+        <div class="movie-length">240 min</div>
+        <div class="movie-year">2001</div>
+        <div class="movie-country">{{country}}</div>
 
-</div>
+    </div>
 
-<div class="movie-summary">{{longDescription}}</div>
+    <div class="movie-summary">{{longDescription}}</div>
 
-<div class="movie-info-box">
-    <div class="movie-info-subject">
-        <span class="movie-info-name-icon icon"></span>
-        <span class="movie-info-title"></span>
-        {{trackName}}
+    <div class="movie-info-box">
+        <div class="movie-info-subject">
+            <span class="movie-info-name-icon icon"></span>
+            <span class="movie-info-title"></span>
+            {{trackName}}
+        </div>
+        <div class="movie-info-subject">
+            <span class="movie-info-pgrating-icon icon"></span>
+            <span class="movie-info-title"></span>
+            Rated {{contentAdvisoryRating}}
+        </div>
+        <div class="movie-info-subject">
+            <span class="movie-info-director-icon icon"></span>
+            <span class="movie-info-title"></span>
+            {{artistName}}
+        </div>
+        <div class="movie-info-subject">
+            <span class="movie-info-productionhouse-icon icon"></span>
+            <span class="movie-info-title"></span>
+            {{productionHouse}}
+        </div>
+        <div class="movie-info-subject">
+            <span class="movie-info-writers-icon icon"></span>
+            <span class="movie-info-title"></span>
+            {{writers}}
+        </div>
+        <div class="movie-info-subject">
+            <span class="movie-info-language-icon icon"></span>
+            <span class="movie-info-title"></span>
+            {{language}}
+        </div>
+        <div class="movie-info-subject">
+            <span class="movie-info-price-icon icon"></span>
+            <span class="movie-info-title"></span>
+            {{trackPrice}} {{currency}}
+        </div>
     </div>
-    <div class="movie-info-subject">
-        <span class="movie-info-pgrating-icon icon"></span>
-        <span class="movie-info-title"></span>
-        Rated {{contentAdvisoryRating}}
-    </div>
-    <div class="movie-info-subject">
-        <span class="movie-info-director-icon icon"></span>
-        <span class="movie-info-title"></span>
-        {{artistName}}
-    </div>
-    <div class="movie-info-subject">
-        <span class="movie-info-productionhouse-icon icon"></span>
-        <span class="movie-info-title"></span>
-        {{productionHouse}}
-    </div>
-    <div class="movie-info-subject">
-        <span class="movie-info-writers-icon icon"></span>
-        <span class="movie-info-title"></span>
-        {{writers}}
-    </div>
-    <div class="movie-info-subject">
-        <span class="movie-info-language-icon icon"></span>
-        <span class="movie-info-title"></span>
-        {{language}}
-    </div>
-    <div class="movie-info-subject">
-        <span class="movie-info-price-icon icon"></span>
-        <span class="movie-info-title"></span>
-        {{trackPrice}} {{currency}}
-    </div>
-</div>
 
-<div class="movie-preview">
-    <span>Preview</span>
-    <video width=100% controls>
-        <source src={{previewUrl}} type="video/m4v">
-        Your browser does not support HTML5 video.
-    </video>
+    <div class="movie-preview">
+        <span>Preview</span>
+        <video width=100% controls>
+            <source src={{previewUrl}} type="video/m4v">
+            Your browser does not support HTML5 video.
+        </video>
+    </div>
+
 </div>
