--- a/css/movie.css
+++ b/css/movie.css
@@ -12,7 +12,7 @@ html{
 
 .movie-thumbnail-image img {
     margin-top: -40%;
-    padding: 15% 10px 10px 10px;
+    padding: 15% 10% 10px 10px;
     width: 110px;
 }
 .movie-bar {
@@ -22,7 +22,7 @@ html{
 }
 
 .movie-bar-title{
-    font-size: 18px;
+    font-size: 1em;
     margin-top: 10%;
 }
 
@@ -56,11 +56,6 @@ html{
     background-color: #05052B;
 }
 
-/*
-.movie-info-details{
-    padding: 0;
-    margin: 0;
-}*/
 
 .movie-info-box{
     display:block;
@@ -124,4 +119,24 @@ html{
 
 .movie-preview span{
     margin-left: 5%;
+}
+
+@media screen and (min-width: 768px) {
+    .movie-page{
+        font-size: 2em;
+    }
+
+    .movie-bar-genre{
+        font-size: 1em;
+    }
+
+    .movie-info-subject{
+        font-size: 1.6em;
+    }
+
+    .movie-thumbnail-image img {
+        margin-top: -40%;
+        padding: 15% 10% 10px 40px;
+        width: 210px;
+    }
 }
